// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectPage when given projects correctly renders 1`] = `
<div>
  <Component
    text={null}
  />
  <Component
    project="project"
  />
</div>
`;

exports[`ProjectPage when loading renders with loading information 1`] = `
<div>
  <Component />
  <Component
    text="Fetching project..."
  />
</div>
`;

exports[`ProjectPage with error renders with error bar 1`] = `
<div>
  <Component />
  <Component
    detail="an error"
    text="Could not load project"
  />
</div>
`;
